Fix: preventOverflow padding is now 5 instead of 4, use 10px

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -9,7 +9,7 @@
 
 .#{$namespace-prefix}-popper {
   pointer-events: none;
-  max-width: calc(100% - 8px);
+  max-width: calc(100% - 10px);
   transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
